adds composer package to deps
Signed-off-by: Daniel Berry <danielberrytn@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,16 @@
             "email": "danielberrytn@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://packages.kyaris.com"
+        }
+    ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "5.0.*"
+        "illuminate/support": "5.0.*",
+        "kyaris/composer": "~1.0"
     },
     "autoload": {
         "psr-4": {
